Set ck editor to fixed height in mWeb An attempt to avoid cursor misplacement on iOS resulting from content overlay

--- a/app/components/work_packages/activities_tab/journals/new_component.sass
+++ b/app/components/work_packages/activities_tab/journals/new_component.sass
@@ -17,6 +17,8 @@
         .ck-content
             &.ck-focused
                 max-height: 30vh
+                @media screen and (max-width: $breakpoint-sm)
+                  height: 30vh
             &.ck-blurred
                 max-height: 10vh
         .ck-editor__preview
